--- a/test-html/navigating.html
+++ b/test-html/navigating.html
@@ -9,9 +9,10 @@
     <form action="" id="" class="" name="">
         <input name="passwd" id="passwd-id" value="1234" type="password" />
 
-        <select name="human_being" id="human_being">
-            <option value="male">Male</option>
-            <option value="female">Female</option>
+        <select name="human_being" id="human_being" multiple>
+            <option value="">Select One</option>
+            <option value="male" selected >Male</option>
+            <option value="female" selected >Female</option>
         </select>
     </form>
 </body>
